DS-1146 fix: Links in banners with colored backgrounds are not visible

--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -297,3 +297,16 @@
     font-size: 10px;
   }
 }
+
+// Ensure links in white text areas are legible.
+.text-white {
+  a {
+    color: #fff;
+    text-decoration: underline;
+
+    &:hover {
+      color: var(--ylb-color-light-grey-2, lightgray);
+      text-decoration: underline;
+    }
+  }
+}
